Fix spacing below Backup tabs

--- a/common/css/pressshack-admin.css
+++ b/common/css/pressshack-admin.css
@@ -77,6 +77,7 @@
 
 .pressshack-admin-wrapper .nav-tab-wrapper .nav-tab {
     color: inherit;
+    margin-bottom: -1px;
 }
 
 .pressshack-admin-wrapper .nav-tab-wrapper .nav-tab-active,
@@ -151,7 +152,7 @@
     background-color: #FFB300;
     border-color: #C58C07;
     color: #754D26;
-    
+
     text-shadow: none;
 }
 
